# zapp-atlas

./: .dockerignore  .gitignore  Dockerfile  Justfile  LICENSE  README.md  fly.toml
client/: .eslintrc.cjs  index.html  package-lock.json  package.json  phenodemo.html  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
docs/: initial-database-api-plan.md  plan-connect-form-to-api.md  plan.md  ui-rework-poc-spec.md
legacy/: README.md
scripts/: build_chebi_and_vehicle_cache.py  download_data.py  download_data.yaml  download_pubchem.py  export_seed.py  (+6 more)
server/: .env.default  Makefile  __init__.py  chemicals.py  db.py  init_db.py  main.py  ontology.py  pyproject.toml  routers.py  seed.py  storage.py
server/api/: __init__.py  deps.py  main.py  read_models.py  serializers.py
server/api/routers/: experiments.py  exposures.py  images.py  observations.py  ols.py  studies.py  zfin.py
server/api/services/: experiments.py  exposures.py  images.py  observations.py  studies.py
server/src/zapp_atlas/: main.py  seed.py  settings.py
server/src/zapp_atlas/api/: deps.py  models.py  router.py
server/src/zapp_atlas/api/routers/: chemicals.py  experiments.py  exposures.py  images.py  observations.py  studies.py  submission.py
server/src/zapp_atlas/api/services/: __init__.py  experiments.py  exposures.py  images.py  observations.py  studies.py
server/src/zapp_atlas/auth/: __init__.py  models.py  router.py  services.py
server/src/zapp_atlas/db/: __init__.py  db.py  image_storage.py  init_db.py
server/src/zapp_atlas/html/: __init__.py  router.py
server/src/zapp_atlas/schema/: pydantic.py  pydantic_crud.py  sqla.py  zebrafish_toxicology_atlas_schema.yaml
server/src/zapp_atlas/schema/_gen/: pydantic.py  pydantic_crud.py  sqla.py
server/src/zapp_atlas/workshop_server/: credentials.txt  main.py
server/tests/: conftest.py  test_api.py  test_api_deletes.py  test_api_experiments.py  test_api_exposures.py  test_api_full_graph.py  test_api_health.py  test_api_images.py  test_api_observations.py  test_api_ols.py  test_api_studies.py  test_api_zfin.py  test_auth_orcid.py  test_db.py  test_seed.py
(+65 files in other folders)
