[project]
name = "zapp-atlas-server"
version = "0.1.0"
description = "Server for the ZAPP atlas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "fastapi>=0.135.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "uvicorn>=0.30.0",
    "zebrafish-toxicology-atlas-schema @ git+https://github.com/zappfish/zebrafish-toxicology-atlas-schema.git@main",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = [".."]
