[project]
name = "zapp-atlas"
version = "0.1.0"
description = "Server and utilities for the ZAPP atlas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "fastapi>=0.135.1",
    "linkml",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "uvicorn>=0.30.0",
]

# FIXME: Remove this after moving schema inline
[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0",
]

# FIXME: Delete this when this commit is in a release of linkml
[tool.uv.sources.linkml]
git = "https://github.com/linkml/linkml"
rev = "820b2473d94d43646fc96f4ad5dd42eb86be3bfa"
subdirectory = "packages/linkml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zapp_atlas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
